firebase phone auth completed

--- a/app/src/main/res/layout/activity_forgot_password_screen.xml
+++ b/app/src/main/res/layout/activity_forgot_password_screen.xml
@@ -20,7 +20,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
-            android:src="@drawable/ic_back_button" />
+            android:src="@drawable/ic_back_button_white" />
 
         <ImageView
             android:id="@+id/login_image"
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:gravity="center"
-            android:text="Forgot Password?"
+            android:text="Create Account"
             android:textColor="@color/black"
             android:textSize="23sp" />
 
@@ -65,18 +65,27 @@
                     android:id="@+id/forgot_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Email"
+                    android:text="Phone Number"
                     android:textColor="@color/black"
                     android:textSize="@dimen/smallTextSize" />
 
                 <EditText
+                    android:id="@+id/userPhoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/input_height"
                     android:layout_marginTop="@dimen/input_top_margin"
                     android:background="@drawable/custom_input_background"
-                    android:hint="johndeo@gmail.com"
-                    android:inputType="textEmailAddress"
+                    android:hint="enter valid phone number"
+                    android:inputType="number"
+                    android:maxLength="10"
                     android:paddingStart="10dp" />
+
+                <ProgressBar
+                    android:id="@+id/forgotScreenProgressBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:visibility="gone" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
 
@@ -87,9 +96,9 @@
                 android:layout_alignParentBottom="true"
                 android:background="@drawable/custom_auth_btn_background"
                 android:text="Send"
+                android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="@dimen/smallTextSize"
-                android:textAllCaps="false"
 
                 />
 
