--- a/app/src/main/res/layout/activity_otp_verfication_screen.xml
+++ b/app/src/main/res/layout/activity_otp_verfication_screen.xml
@@ -55,11 +55,22 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:gravity="center"
-            android:text="Please enter the 4 digit code sent to your register email"
+            android:text="Please enter the 6 digit code sent to your phone number"
             android:textAlignment="center"
             android:textColor="@color/textSmallColor"
             android:textFontWeight="400"
             android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/phoneNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="+91 8238949574"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -194,6 +205,16 @@
                     android:text="Resend OTP"
                     android:textColor="@color/primaryColor"
                     android:textSize="18sp" />
+
+
+                <ProgressBar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:visibility="gone"
+                    android:id="@+id/verifyScreenProgressBar"
+                    />
+
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
